@@ -10,7 +10,6 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InOrder;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.synyx.urlaubsverwaltung.TestDataCreator;
 import org.synyx.urlaubsverwaltung.application.application.Application;
 import org.synyx.urlaubsverwaltung.application.application.ApplicationService;
 import org.synyx.urlaubsverwaltung.application.application.ApplicationStatus;
@@ -25,7 +24,6 @@ import org.synyx.urlaubsverwaltung.settings.SettingsService;
 import java.time.Clock;
 import java.time.Duration;
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -39,7 +37,6 @@ import static java.time.temporal.TemporalAdjusters.lastDayOfYear;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
@@ -224,19 +221,6 @@ class OvertimeServiceImplTest {
         assertThat(maybeOvertime).isEmpty();
     }
 
-    // Get overtime records for person and year ------------------------------------------------------------------------
-    @Test
-    void ensureGetRecordsByPersonAndYearCallsCorrectDAOMethod() {
-
-        final Person person = new Person("muster", "Muster", "Marlene", "muster@example.org");
-
-        sut.getOvertimeRecordsForPersonAndYear(person, 2015);
-
-        final LocalDate firstDay = LocalDate.of(2015, 1, 1);
-        final LocalDate lastDay = LocalDate.of(2015, 12, 31);
-        verify(overtimeRepository).findByPersonAndStartDateBetweenOrderByStartDateDesc(person, firstDay, lastDay);
-    }
-
     // Get overtime comments -------------------------------------------------------------------------------------------
     @Test
     void ensureGetCommentsCorrectDAOMethod() {
@@ -252,16 +236,12 @@ class OvertimeServiceImplTest {
     void ensureReturnsZeroIfPersonHasNoOvertimeRecordsYetForTheGivenYear() {
 
         final Person person = new Person("muster", "Muster", "Marlene", "muster@example.org");
-
-        when(overtimeRepository.findByPersonAndStartDateBetweenOrderByStartDateDesc(eq(person), any(LocalDate.class), any(LocalDate.class)))
-            .thenReturn(Collections.emptyList());
+        final LocalDate firstDayOfYear = LocalDate.of(2016, 1, 1);
+        final LocalDate lastDayOfYear = LocalDate.of(2016, 12, 31);
+        when(overtimeRepository.findByPersonAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqual(person, firstDayOfYear, lastDayOfYear)).thenReturn(List.of());
 
         final Duration totalHours = sut.getTotalOvertimeForPersonAndYear(person, 2016);
         assertThat(totalHours).isEqualTo(Duration.ZERO);
-
-        final LocalDate firstDayOfYear = LocalDate.of(2016, 1, 1);
-        final LocalDate lastDayOfYear = LocalDate.of(2016, 12, 31);
-        verify(overtimeRepository).findByPersonAndStartDateBetweenOrderByStartDateDesc(person, firstDayOfYear, lastDayOfYear);
     }
 
     @Test
@@ -269,21 +249,15 @@ class OvertimeServiceImplTest {
 
         final Person person = new Person("muster", "Muster", "Marlene", "muster@example.org");
 
-        final Overtime overtimeRecord = TestDataCreator.createOvertimeRecord(person);
-        overtimeRecord.setDuration(Duration.ofHours(1));
-
-        final Overtime otherOvertimeRecord = TestDataCreator.createOvertimeRecord(person);
-        otherOvertimeRecord.setDuration(Duration.ofHours(10));
-
-        when(overtimeRepository.findByPersonAndStartDateBetweenOrderByStartDateDesc(eq(person), any(LocalDate.class), any(LocalDate.class)))
-            .thenReturn(List.of(overtimeRecord, otherOvertimeRecord));
-
-        final Duration totalHours = sut.getTotalOvertimeForPersonAndYear(person, 2016);
-        assertThat(totalHours).isEqualTo(Duration.ofHours(11));
+        final Overtime overtimeRecord = new Overtime(person, LocalDate.of(2016, 1, 5), LocalDate.of(2016, 1, 5), Duration.ofHours(1));
+        final Overtime otherOvertimeRecord = new Overtime(person, LocalDate.of(2016, 2, 5), LocalDate.of(2016, 2, 5), Duration.ofHours(10));
 
         final LocalDate firstDayOfYear = LocalDate.of(2016, 1, 1);
         final LocalDate lastDayOfYear = LocalDate.of(2016, 12, 31);
-        verify(overtimeRepository).findByPersonAndStartDateBetweenOrderByStartDateDesc(person, firstDayOfYear, lastDayOfYear);
+        when(overtimeRepository.findByPersonAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqual(person, firstDayOfYear, lastDayOfYear)).thenReturn(List.of(overtimeRecord, otherOvertimeRecord));
+
+        final Duration totalHours = sut.getTotalOvertimeForPersonAndYear(person, 2016);
+        assertThat(totalHours).isEqualTo(Duration.ofHours(11));
     }
 
     @Test
@@ -294,16 +268,13 @@ class OvertimeServiceImplTest {
         final Overtime overtime = new Overtime(person, LocalDate.of(2016, 1, 5), LocalDate.of(2016, 1, 5), Duration.ofHours(10));
         final Overtime overtime2 = new Overtime(person, LocalDate.of(2016, 2, 5), LocalDate.of(2016, 2, 5), Duration.ofHours(4));
 
-        final LocalDate firstDateOfYear = LocalDate.of(2016, 1, 1);
-        when(overtimeRepository.findByPersonAndStartDateIsBefore(person, firstDateOfYear))
-            .thenReturn(List.of(overtime, overtime2));
+        final LocalDate firstDayOfYear = LocalDate.of(2017, 1, 1);
+        final LocalDate lastDayOfBeforeYear = firstDayOfYear.minusYears(1).with(lastDayOfYear());
+        when(overtimeRepository.findByPersonAndStartDateIsBefore(person, firstDayOfYear)).thenReturn(List.of(overtime, overtime2));
+        when(applicationService.getTotalOvertimeReductionOfPersonUntil(person, lastDayOfBeforeYear)).thenReturn(Duration.ofHours(1));
 
-        when(applicationService.getTotalOvertimeReductionOfPersonBefore(person, firstDateOfYear)).thenReturn(Duration.ofHours(1));
-
-        final Duration totalHours = sut.getTotalOvertimeForPersonBeforeYear(person, 2016);
+        final Duration totalHours = sut.getTotalOvertimeForPersonBeforeYear(person, 2017);
         assertThat(totalHours).isEqualTo(Duration.ofHours(13));
-
-        verify(overtimeRepository).findByPersonAndStartDateIsBefore(person, firstDateOfYear);
     }
 
     // Get left overtime -----------------------------------------------------------------------------------------------
@@ -347,64 +318,6 @@ class OvertimeServiceImplTest {
 
         final Duration leftOvertime = sut.getLeftOvertimeForPerson(person);
         assertThat(leftOvertime).isEqualTo(Duration.ZERO);
-    }
-
-
-    @Test
-    void ensureLeftOvertimeOfPersonIsZeroIfNoOvertimeAndOvertimeReductionIsFound() {
-
-        final Person person = new Person();
-        final LocalDate start = LocalDate.of(2022, 10, 10);
-        final LocalDate end = LocalDate.of(2022, 10, 20);
-        when(overtimeRepository.findByPersonAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqual(person, start, end)).thenReturn(List.of());
-        when(applicationService.getTotalOvertimeReductionOfPerson(person, start, end)).thenReturn(Duration.ZERO);
-
-        final Duration totalOvertimeReduction = sut.getLeftOvertimeForPerson(person, start, end);
-        assertThat(totalOvertimeReduction).isZero();
-    }
-
-    @Test
-    void ensureLeftOvertimeOfPersonIsZeroIfApplicationIsInRange() {
-
-        final Person person = new Person();
-        final LocalDate start = LocalDate.of(2022, 10, 10);
-        final LocalDate end = LocalDate.of(2022, 10, 20);
-
-        final Overtime overtime = new Overtime(person, LocalDate.of(2022, 10, 9), LocalDate.of(2022, 10, 12), Duration.ofHours(12));
-        when(overtimeRepository.findByPersonAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqual(person, start, end)).thenReturn(List.of(overtime));
-        when(applicationService.getTotalOvertimeReductionOfPerson(person, start, end)).thenReturn(Duration.ofHours(4));
-
-        final Duration totalOvertimeReduction = sut.getLeftOvertimeForPerson(person, start, end);
-        assertThat(totalOvertimeReduction).isEqualTo(Duration.ofHours(5));
-    }
-
-    @Test
-    void ensureLeftOvertimeOfPersonIsZeroIfApplicationIsAtStart() {
-
-        final Person person = new Person();
-        final LocalDate start = LocalDate.of(2022, 10, 10);
-        final LocalDate end = LocalDate.of(2022, 10, 20);
-
-        final Overtime overtime = new Overtime(person, LocalDate.of(2022, 10, 20), LocalDate.of(2022, 10, 23), Duration.ofHours(12));
-        when(overtimeRepository.findByPersonAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqual(person, start, end)).thenReturn(List.of(overtime));
-        when(applicationService.getTotalOvertimeReductionOfPerson(person, start, end)).thenReturn(Duration.ofHours(4));
-
-        final Duration totalOvertimeReduction = sut.getLeftOvertimeForPerson(person, start, end);
-        assertThat(totalOvertimeReduction).isEqualTo(Duration.ofHours(-1));
-    }
-
-    @Test
-    void ensureTotalOvertimeReductionOfPersonWithApplicationEndOfRange() {
-
-        final Person person = new Person();
-        final LocalDate start = LocalDate.of(2022, 10, 10);
-        final LocalDate end = LocalDate.of(2022, 10, 20);
-
-        final Overtime overtime = new Overtime(person, LocalDate.of(2022, 10, 20), LocalDate.of(2022, 10, 22), Duration.ofHours(12));
-        when(overtimeRepository.findByPersonAndEndDateIsGreaterThanEqualAndStartDateIsLessThanEqual(person, start, end)).thenReturn(List.of(overtime));
-
-        final Duration totalOvertimeReduction = sut.getLeftOvertimeForPerson(person, start, end);
-        assertThat(totalOvertimeReduction).isEqualTo(Duration.parse("PT4H"));
     }
 
     @ParameterizedTest
